--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
 <body>
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default fixed-top navigation-tag">
+    <nav class="navbar navbar-expand-md navbar-fixed-top navbar-default fixed-top navigation-tag" role='navigation'
+        name='navigation bar' value='nav' description='navigation bar for website'>
         <a class="navbar-brand active" href="index.html">
             Home
         </a>
@@ -63,8 +64,8 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf" download="Sammy Robens-Paradise Resume"
-                        id="navbar_resume">Resume</a>
+                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf"
+                        download="Sammy Robens-Paradise Resume" id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
@@ -116,7 +117,8 @@
     <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="justify-content-center landing-text anim-typewriter display-3">A creative west coast kid.</h1>
+            <h1 role='title' description='landing page text'
+                class="justify-content-center landing-text anim-typewriter display-3">A creative west coast kid.</h1>
             <h1 class="justify-content-center landing-text-sub display-4">
                 <stringname>S</stringname>
                 <stringname>a</stringname>
@@ -139,24 +141,26 @@
                 <stringname>s</stringname>
                 <stringname>e</stringname>
             </h1>
-            <h2 style="width: 60%; text-align: center; margin: 0 auto; padding-bottom: 20px;" class="justify-content-center display-5">Looking for opportunities in UX, software development or product design beginning May 2020!</h2>
+            <h2 style="width: 60%; text-align: center; margin: 0 auto; padding-bottom: 20px;"
+                class="justify-content-center display-5">Looking for opportunities in UX, software development or
+                product design beginning May 2020!</h2>
             <div class="landing-image">
-                    <p style="text-align: center;"class="find-out-what-working-on">Find out what I've been working on!</p>
+                <p style="text-align: center;" class="find-out-what-working-on">Find out what I've been working on!</p>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="landing-page-content"></div>
                     </div>
                     <div class="col-md-6">
-                        
+
                         <div class="center-content">
-                        <button class="button-des" id="projects-button"
-                            onclick="scrollToEl('projects',null)">Projects</button>
-                        <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button class="button-des"
-                                id="portfolio-button">Portfolio</button></a>
-                        <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
-                        <a id="href-a-to-resume-dwld" href="./src/assets/Resume_fall_16_v2.pdf" target="_blank"><button
-                                class="button-des" id="cv-button">Resume/CV</button></a>
-                            </div>
+                            <button class="button-des" id="projects-button"
+                                onclick="scrollToEl('projects',null)">Projects</button>
+                            <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
+                                    class="button-des" id="portfolio-button">Portfolio</button></a>
+                            <button class="button-des" id="work-button" onclick="scrollToEl('work',null)">Work</button>
+                            <a id="href-a-to-resume-dwld" href="./src/assets/Resume_fall_16_v2.pdf"
+                                target="_blank"><button class="button-des" id="cv-button">Resume/CV</button></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -177,7 +181,8 @@
                         <div class="col-sm-12 projects-section-grape" id="grape-sec">
                             <div class="grape-section">
                                 <h2 class="section-p" id="bc-ferries-title">Grape, Learn Code Better - Fall 2019</h2>
-                                <p class="section-p" id="bc-ferries-subtext">Grape, coming soon, will change the way  people learn to code.</p>
+                                <p class="section-p" id="bc-ferries-subtext">Grape, coming soon, will change the way
+                                    people learn to code.</p>
                             </div>
                         </div>
                     </a>
@@ -191,7 +196,8 @@
 
                             <div class="bc-ferries-section">
                                 <h2 class="section-p" id="bc-ferries-title">BC Ferries Case Study - Fall 2019</h2>
-                                <p class="section-p" id="bc-ferries-subtext">A case study and redesign of the BC Ferries digital experience from
+                                <p class="section-p" id="bc-ferries-subtext">A case study and redesign of the BC Ferries
+                                    digital experience from
                                     user
                                     interviews to cloud functions!</p>
                             </div>
@@ -206,7 +212,8 @@
                         <div class="col-sm-12 projects-section-portfolio" id="portfolio-sec">
                             <div class="portfolio-spring-2019">
                                 <h2 class="section-p" id="portfolio-title">Portfolio - Spring 2019</h2>
-                                <p class="section-p" id="portfolio-text">Check out my Spring 2019 portfolio built from the ground up using
+                                <p class="section-p" id="portfolio-text">Check out my Spring 2019 portfolio built from
+                                    the ground up using
                                     react.js
                                     and
                                     nifty design concepts!</p>
@@ -221,7 +228,8 @@
                         <div class="col-sm-12 projects-section-eb-web" id="eb-web-sec">
                             <div class="eb-web-fall-2018">
                                 <h2 class="section-p" id="eb-title">EB Web Design - Fall 2018</h2>
-                                <p class="section-p" id="eb-subtext">A react.js web app designed for an actress based out of vancouver
+                                <p class="section-p" id="eb-subtext">A react.js web app designed for an actress based
+                                    out of vancouver
                                     featuring
                                     her
                                     fall 2018 reel and bio!</p>
@@ -236,7 +244,8 @@
                         <div class="col-sm-12 projects-section-school-rel" id="school-sec">
                             <div class="school-rel-2017-2019">
                                 <h2 class="section-p" id="school-title">School Projects - First Year</h2>
-                                <p class="section-p" id="school-subtext">A collection of my first year projects from Systems Design
+                                <p class="section-p" id="school-subtext">A collection of my first year projects from
+                                    Systems Design
                                     Engieering,
                                     at
                                     UWaterloo!</p>
@@ -256,7 +265,8 @@
                         <div class="col-sm-12 work-section-hootsuite" id="hootsuite-sec">
                             <div class="hootsuite-section">
                                 <h2 class="section-p" id="hootsuite-title">Hootsuite - Fall 2019</h2>
-                                <p class="section-p" id="hootsuite-subtext">Incomming Software Developer at Hootsuite, Plan and Create Team,
+                                <p class="section-p" id="hootsuite-subtext">Incomming Software Developer at Hootsuite,
+                                    Plan and Create Team,
                                     beginning
                                     September 2019!</p>
                             </div>
@@ -269,8 +279,10 @@
                     <a href="./finger-food-atg-projects.html">
                         <div class="col-sm-12 work-section-ffatg" id="ffsatg-sec">
                             <div class="ffatg-section">
-                                <h2 class="section-p" id="ffatg-title">Finger Food Advanced Technology Group - 2018/2019</h2>
-                                <p class="section-p" id="ffatg-subtext">A look at my projects and contributions during my time as QA Lead
+                                <h2 class="section-p" id="ffatg-title">Finger Food Advanced Technology Group - 2018/2019
+                                </h2>
+                                <p class="section-p" id="ffatg-subtext">A look at my projects and contributions during
+                                    my time as QA Lead
                                     at
                                     Finger
                                     Food!</p>
@@ -284,7 +296,8 @@
                     <a href="https://www.canada.ca/en/environment-climate-change/corporate/mandate.html">
                         <div class="col-sm-12 work-section-eccc" id="eccc-sec">
                             <div class="eccc-section">
-                                <h2 class="section-p"id="eccc-title">Environment and Climate Change Canada - Winter 2018</h2>
+                                <h2 class="section-p" id="eccc-title">Environment and Climate Change Canada - Winter
+                                    2018</h2>
                                 <p class="section-p" id="eccc-subtext">Worked on the software infrastructure behind
                                     Canada's Climate battle!</p>
                             </div>
@@ -310,9 +323,12 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="center-text">
-                    <p>Hi there! Check out a new open source front-end react library I am working on called <code><a href='https://sammyrp.com/global-winery'>Global-winery</a></code>! Its also on <a href="https://www.npmjs.com/package/global-winery">npm</a> </p>
+                    <p>Hi there! Check out a new open source front-end react library I am working on called
+                        <code><a href='https://sammyrp.com/global-winery'>Global-winery</a></code>! Its also on <a
+                            href="https://www.npmjs.com/package/global-winery">npm</a> </p>
                     <div class="button-space modal-button">
-                        <button class="button-des" id="close-dialog" onclick="hideModal('mobile-coming')">Okay, cool!</button>
+                        <button class="button-des" id="close-dialog" onclick="hideModal('mobile-coming')">Okay,
+                            cool!</button>
                     </div>
                 </div>
 
