added linking to new portfolio

--- a/index.html
+++ b/index.html
@@ -176,6 +176,20 @@
             </div>
             <!--New Section-->
             <div class=row>
+                <div class="container" id="portfolio-winter-2020-container">
+                    <a href="./portfolio-winter-2020.html">
+                        <div class="col-sm-12 projects-section-portfolio-winter-2020" id="portfolio-winter-2020-sec">
+                            <div class="portfolio-winter-2020-section">
+                                <h2 class="section-p" id="bc-ferries-title">Portfolio - Winter 2020</h2>
+                                <p class="section-p" id="bc-ferries-subtext">Check out my latest portfolio, for the
+                                    winter 2020 season, built with React.js</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!--New Section-->
+            <div class=row>
                 <div class="container" id="grape-container">
                     <a href="https://grape-promo.firebaseapp.com">
                         <div class="col-sm-12 projects-section-grape" id="grape-sec">
