--- a/portfolio-winter-2020.html
+++ b/portfolio-winter-2020.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <!-- Intern al main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="portfolio-winter-2020.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -118,35 +118,37 @@
     <div class="navigation-padding"></div>
     <div class="row">
         <div class="col-sm-12">
-            <h1 class="display-3">Portfolio, Spring 2019</h1>
-            <h1 class="display-4">Exploring the usage of react.js for a unique web app portfolio experience</h1>
+            <h1 class="display-3">Portfolio, Winter 2020</h1>
+            <h1 class="display-4">React, Paper and anime.js for a animated web experience</h1>
             <div class="">
 
                 <div class="row">
                     <div class="col-lg-6 center-image-">
-                        <div class="user-trigger-img"></div>
+                        <div role="img" alt="portfolio-winter-2020" class="user-trigger-img"></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
-                                About the portfolio
+                                About the portfolio, Winter 2020
                             </h2>
                             <p class="why-the-portfolio-para">
-                                I decieded to explore the usage of a native-like experince to display my design and
-                                development skillset in an attempt to ask users to spend more time on each page.
+                                Explore my winter 2020 portfolio, Using rough edges and solid coloring, this portfolio
+                                represents a departure from the dark theme of my spring 2019 showcase.
                             </p>
-                            <p>
-                                The attempt of the portfolio was to change the traditional format of a website to more
-                                of an <b>experience</b>. rather than using large amounts of text, I decieded
-                                to have the main focus of the portfolio be illustrations. the dark theme used is
-                                intended to create a change of scenery for users. The web app also conforms to a space
-                                them,
-                                something that has always been of interest to me. The source code can be found on <a
-                                    href="https://github.com/SammyRobensParadise/portfolio-app">github</a> ❤️.
+                            <p>The aim of this portfolio was to explore the usage of dynamic content and
+                                <code>svg</code> animations to display content. The design features to large triangles
+                                in the static background, representing my westcoast origins, combined with a dark cyan
+                                background. Much of the content is comprised of <code>svg</code> assets and features
+                                some growing tech and libraries including <a
+                                    href='https://www.styled-components.com/'>Styled-Components</a>, <a
+                                    href="https://animejs.com/">anime.js</a>, <a href="http://paperjs.org/">Paper.js</a>
+                                and of course <b>Redux and React 16 with dynamic imports</b> and server side rendering for
+                                increased load time. The source code can be found on <a
+                                    href="https://github.com/SammyRobensParadise/portfolio-winter-2020">github</a> ❤️.
                             </p>
                             <div class="button-space">
-                                <a id="href-a-to-sammy" href="https://portfolio-app-1091c.firebaseapp.com/"
-                                    target="_blank"><button class="button-des" id="portfolio-button">Explore
+                                <a id="href-a-to-sammy" href="https://sammy.world" target="_blank"><button
+                                        class="button-des" id="portfolio-button">Explore
                                         Portfolio</button></a>
                             </div>
 
