--- a/portfolio-winter-2020.html
+++ b/portfolio-winter-2020.html
@@ -119,7 +119,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h1 class="display-3">Portfolio, Winter 2020</h1>
-            <h1 class="display-4">React, Paper and anime.js for a animated web experience</h1>
+            <h1 class="display-4">React, Paper and anime.js for an animated web experience</h1>
             <div class="">
 
                 <div class="row">
