fixed  types contd

--- a/bc-ferries-redesign.html
+++ b/bc-ferries-redesign.html
@@ -132,18 +132,18 @@
                         </h2>
                         <p class="why-the-case-study-para">
                             <a href="https://www.bcferries.com" target="_blank">BC ferries</a> is the largest ferry
-                            service is canada and serves more than 6 million people
-                            annually. it is the life line for thousands of British Columbians across the province.
+                            service in Canada and serves more than 6 million people
+                            annually. it is the life-line for thousands of British Columbians across the province.
                         </p>
-                        <p>Although BC Ferries plays a critical role in maintaining the lives of thousands of
+                        <p>Although BC Ferries plays a critical role in maintaining the lives of many of
                             people,
-                            the service has failed to maintain and update their digital
-                            presence and provide a clear and positive digital user experience. As a British
+                            the service has failed to maintain a digital
+                            presence and provide a clear and positive user experience. As a British
                             Columbian,
-                            and an engineer studying Systems Design, at the University of Waterloo,
+                            and an engineer studying Systems Design, at the University of Waterloo, I see
                             the potential for growth and improvement provided an inviting oppertunity for a
                             re-design,
-                            examining the "pain points" for users during the digial experience
+                            examining the "pain points" for users during the digial experience.
                         </p>
                     </div>
                 </div>
@@ -224,9 +224,9 @@
                 </p>
                 <p>
                     To prototype designs and wireframes, I use Adobe Experience Designer, Illustrator and Photoshop to
-                    creat mockups and prototypes
+                    create mockups and prototypes
                     that I can present to users for feedback. using theses tools, I can quickly improve and
-                    iterate over design improvements
+                    iterate over designs
                     before development even starts.
                 </p>
             </div>
@@ -272,9 +272,9 @@
                 <p>
                     The web app will be deployed and hosted on Google's firebase, and the source code will be available
                     on <a href="https://github.com/SammyRobensParadise/bcferries" target="_blank">github</a>. The case
-                    study will not be intended to serve as an alternative to the BC ferries website, but rather stand
+                    study is not be intended to serve as an alternative to the BC ferries website, but rather stand
                     alone as a possible re-design
-                    to address some of the pain points experienced by users when using their website.
+                    to address some of the shortcomings with the current user experience.
                 </p>
             </div>
         </div>
