--- a/finger-food-atg-projects.html
+++ b/finger-food-atg-projects.html
@@ -119,7 +119,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h1 class="display-3">Finger Food Projects</h1>
-            <h1 class="display-4">Disclosable projects that I had the oppertunity to work on at Finger Food</h1>
+            <h1 class="display-4">Disclosable projects that I had the oppertunity to work on at Finger Food ATG</h1>
             <div class="">
                 <div class="row"><div class="col-sm-12">
                         <div class="button-space">
@@ -170,7 +170,7 @@
                     Sphero EDU
                 </h2>
                 <p class="why-the-safe-para">
-                    Sphero EDU is the first ever educational app that delivered an app-based system to visually program sphero robots. Users can build, share and create programs to control their robots.
+                    Sphero EDU is the first ever educational app that delivered an native system to visually program sphero robots. Users can build, share and create programs to control their robots.
                 </p>
                 <p>
                     Read Finger Food's <a href="https://www.fingerfoodatg.com/sphero/" target="_blank">case study on Sphero EDU</a>.
