--- a/portfolio.html
+++ b/portfolio.html
@@ -132,16 +132,16 @@
                                 About the portfolio
                             </h2>
                             <p class="why-the-portfolio-para">
-                                I decieded to explore the usage of a native-like experince to display my design and
+                                I decieded to explore the usage of a native app-like experince to display my design and
                                 development skillset in an attempt to ask users to spend more time on each page.
                             </p>
                             <p>
-                                The attempt of the portfolio was to change the traditional format of a website to more
+                                The goal of the portfolio (2019) was to change the traditional format of a website to
+                                more
                                 of an <b>experience</b>. rather than using large amounts of text, I decieded
-                                to have the main focus of the portfolio be illustrations. the dark theme used is
-                                intended to create a change of scenery for users. The web app also conforms to a space
-                                them,
-                                something that has always been of interest to me. The source code can be found on <a
+                                to focus on illustrations. the dark theme used is
+                                intended to create a change of scenery for users coming from a light themed environment.
+                                The source code can be found on <a
                                     href="https://github.com/SammyRobensParadise/portfolio-app">github</a> ❤️.
                             </p>
                             <div class="button-space">
