--- a/school-projects.html
+++ b/school-projects.html
@@ -65,8 +65,8 @@
                 </li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf" download="Sammy Robens-Paradise Resume"
-                        id="navbar_resume">Resume</a>
+                    <a class="nav-link" href="./src/assets/Resume_fall_16_v2.pdf"
+                        download="Sammy Robens-Paradise Resume" id="navbar_resume">Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./me.html" id="navbar_whos_sammy">Who's Sammy</a>
@@ -198,7 +198,7 @@
                     <div class="col-md-6" id="safe-photo-gallery">
                         <div class="text-container">
                             <h2 class="bc-ferries-h2">
-                               Safe, Photo Gallery
+                                Safe, Photo Gallery
                             </h2>
                             <p class="why-the-safe-para">
                                 Check out the photo gallery of the completed project!
@@ -231,12 +231,20 @@
                                 Gangl, Design Case Study
                             </h2>
                             <p class="why-the-safe-para">
-                                in 2017, 90% of students reported that they were stressed and overworked during their post-secondary education. the Gangl App, is a platform designed and prototyped to combat stress caused by workload in undergraduate students.
+                                in 2017, 90% of students reported that they were stressed and overworked during their
+                                post-secondary education. the Gangl App, is a platform designed and prototyped to combat
+                                stress caused by workload in undergraduate students.
                             </p>
                             <p>
-                                The app was designed and prototyped using marvel design studio. the project followed the iterative design process to the book. it begain with the definition of a problem statement, identificaiton of key stakeholders and users and intensive reseach.
-                                A QFD and various other design tools were used to quantify specific aspects of the design. finally the project was iterativly designed from low fidelity, through high fidelity prototypes. It was presented as a final high fidelity prototype at the end of the term.
-                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf" target="_blank">View the full report</a>.
+                                The app was designed and prototyped using marvel design studio. the project followed the
+                                iterative design process to the book. it begain with the definition of a problem
+                                statement, identificaiton of key stakeholders and users and intensive reseach.
+                                A QFD and various other design tools were used to quantify specific aspects of the
+                                design. finally the project was designed from low fidelity, through high
+                                fidelity prototypes. It was presented as a final high fidelity prototype at the end of
+                                the term.
+                                Interested in learning more? <a href="./src/assets/Gangl_161_Final_Report.pdf"
+                                    target="_blank">View the full report</a>.
                             </p>
                             <div class="button-space">
                                 <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">
