--- a/me.html
+++ b/me.html
@@ -135,8 +135,8 @@
                                 In other words, I study the way humans interact with technology.
                             </p>
                             <p>
-                                Every day we interact with douzens of different systems, from the traffic system on your
-                                commute, to your email inbox - All of these systems play a role in our every day lives.
+                                Every day we interact with dozens of different systems, from the traffic system on your
+                                commute, to your email inbox - All of these systems play a role in our everyday lives.
                                 At a macro level, I study the way that all of these vastly complex systems interact with
                                 their environment, whether that is humans, animals or other systems.
                                 Systems engineering combines all aspects of modern engineering to construct, visualize
@@ -157,7 +157,7 @@
                         <div class="user-mountains">
                             <div class="user-mountains-trees">
                                 <div class="user-mountains-rocks">
-                                    <h2 class="display-4 bold-text-mountains">From Vancouver BC, ventrue everywhere</h2>
+                                    <h2 class="display-4 bold-text-mountains">From Vancouver BC, venture everywhere</h2>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                                 environment.
                             </p>
                             <p>As someone who advocates optimized engineering solutions, I continue on my journey to
-                                find the most eloquent and beautiful solutions to the worlds most challening problems. I
+                                find the most eloquent and beautiful solutions to the worlds most challenging problems. I
                                 have always taken an interest in the way humans interact with technology, and more
                                 specifically, the way it shapes our experiences.</p>
                             <div class="button-space">
