--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content=" Sammy Robens-Paradie | Website | Resume | About">
     <!-- Internal main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 
