--- a/portfolio-winter-2020.html
+++ b/portfolio-winter-2020.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio | Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content=" Sammy Robens-Paradie | Website | Resume | About">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122502618-1"></script>
