updated landing page for better ux

--- a/index.html
+++ b/index.html
@@ -144,14 +144,16 @@
             <h2 style="width: 60%; text-align: center; margin: 0 auto; padding-bottom: 20px;"
                 class="justify-content-center display-5">Looking for opportunities in UX, software development or
                 product design beginning May 2020!</h2>
-            <div class="landing-image">
-                <p style="text-align: center;" class="find-out-what-working-on">Find out what I've been working on!</p>
+            <div class="landing-image"><img class="sammy-landing-image" src="./src/assets/sammybiking.svg" alt="sammy Biking">
+            </div>
+                <p style="text-align: center;" class="find-out-what-wrking-on">Find out what I've been working on!</p>
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="landing-page-content"></div>
                     </div>
-                    <div class="col-md-6">
-
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                         <div class="center-content">
                             <button class="button-des" id="projects-button"
                                 onclick="scrollToEl('projects',null)">Projects</button>
@@ -163,7 +165,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
             <div class="spacer"></div>
         </div>
     </div>
