added section for hootsuite

--- a/index.html
+++ b/index.html
@@ -276,14 +276,11 @@
             </div>
             <div class=row>
                 <div class="container" id="hootsuite-container">
-                    <a href="https://hootsuite.com">
+                    <a href="./hootsuite.html">
                         <div class="col-sm-12 work-section-hootsuite" id="hootsuite-sec">
                             <div class="hootsuite-section">
                                 <h2 class="section-p" id="hootsuite-title">Hootsuite - Fall 2019</h2>
-                                <p class="section-p" id="hootsuite-subtext">Incomming Software Developer at Hootsuite,
-                                    Plan and Create Team,
-                                    beginning
-                                    September 2019!</p>
+                                <p class="section-p" id="hootsuite-subtext">software Developer, Hootsuite</p>
                             </div>
                         </div>
                     </a>
