--- a/hootsuite.html
+++ b/hootsuite.html
@@ -61,6 +61,12 @@
                     <a class="nav-link" id="navbar_projects" href="https://sammy.world" target="_blank">Portfolio</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" id="navbar_projects" href="https://sammyrp.com/global-winery" >Global-Winery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="navbar_projects" href="https://sammyrp.com/global-winery" >Global-Winery</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" id="navbar_dribbble" href="https://dribbble.com/sammyrp"
                         target="_blank">Dribbble</a>
                 </li>
