--- a/index.html
+++ b/index.html
@@ -338,9 +338,8 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="center-text">
-                    <p>Hi there! Check out a new open source front-end react library I am working on called
-                        <code><a href='https://sammyrp.com/global-winery'>Global-winery</a></code>! Its also on <a
-                            href="https://www.npmjs.com/package/global-winery">npm</a> </p>
+                    <p>Hi there! Check out my latest article about building accessible design into your react development pipeline!
+                        <a href='https://medium.com/@srobensparadise/building-accessibility-into-your-react-app-f142fc786516'> Medium - Building accessibility into your react app</a>
                     <div class="button-space modal-button">
                         <button class="button-des" id="close-dialog" onclick="hideModal('mobile-coming')">Okay,
                             cool!</button>
