--- a/404.html
+++ b/404.html
@@ -1,75 +1,55 @@
-
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sammy Robens-Paradise</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" Sammy Robens-Paradie | Website | Resume | About">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content=" Sammy Robens-Paradie | Website | Resume | About" />
     <!-- Internal main Stylesheet-->
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-social.css" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
-</head>
-<!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
+  </head>
+  <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body style="background-color:#fff">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12" style="text-align: center;">
-                <br>
-                <div class="card" style="width: 100%;">
-                    <img class="card-img-top" src="./404error@2x.png" alt="Card image cap" style="mix-blend-mode: difference;opacity: 50%;">
-                </div>
-                <a style="text-align: center;" id="takemehome" href="./index.html">
-                    Take me home...
-                </a>
-                <br>
-            </div>
-        </div>
+  <body>
+    <div class="center">
+      <a href="https://sammy.world" class="view-portfolio">View Portfolio</a>
     </div>
-    <div class="row">
-        <br>
-        <div class="col-sm-3 text-center">
-            <a href="https://www.facebook.com/samston.rp" target="_blank" class="fa fa-facebook"></a>
-        </div>
-        <div class="col-sm-3 text-center">
-            <a href="https://www.instagram.com/samston_/" target="_blank" class="fa fa-instagram"></a>
-        </div>
-        <div class="col-sm-3 text-center">
-            <a href="https://www.linkedin.com/in/sammy-robens-paradise/" target="_blank" class="fa fa-linkedin"></a>
-        </div>
-        <div class="col-sm-3 text-center">
-            <a href="https://github.com/SammyRobensParadise/SammyRobensParadise.github.io" target="_blank"
-                class="fa fa-github"></a>
-        </div>
-    </div>
-    <br>
-    </footer>
-    <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
-</body>
-
+  </body>
 </html>
