added additional item

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
             >
             <p>A drag-and-drop card matching activity to teach the hebrew words for animals.</p>
           </li>
+          <li class="list-item" id="portfolio">
+            <a href="https://SammyRobensParadise.github.io/SYDE-312" class="link"
+              >SYDE-312 Linear Algebra (https://SammyRobensParadise.github.io/SYDE-312)</a
+            >
+            <p>
+              Image color gradient selection using least squares fit and linear transformations.
+            </p>
+          </li>
         </ol>
       </div>
     </div>
