--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               My current portfolio showcasing my latest design work, experience and key projects
             </p>
           </li>
-          <li class="list-item" id="portfolio">
+          <li class="list-item" id="big-little-worlds">
             <a href="https://SammyRobensParadise.github.io/big-little-worlds" class="link"
               >Big Little Worlds (https://SammyRobensParadise.github.io/big-little-worlds)</a
             >
@@ -87,7 +87,7 @@
               data, ethics and engineering.
             </p>
           </li>
-          <li class="list-item" id="portfolio">
+          <li class="list-item" id="drag-and-drop">
             <a
               href="https://SammyRobensParadise.github.io/essential-hebrew-drang-and-drop"
               class="link"
@@ -96,7 +96,7 @@
             >
             <p>A drag-and-drop card matching activity to teach the hebrew words for animals.</p>
           </li>
-          <li class="list-item" id="portfolio">
+          <li class="list-item" id="syde-312">
             <a href="https://SammyRobensParadise.github.io/SYDE-312" class="link"
               >SYDE-312 Linear Algebra (https://SammyRobensParadise.github.io/SYDE-312)</a
             >
