--- a/index.html
+++ b/index.html
@@ -87,6 +87,19 @@
               data, ethics and engineering.
             </p>
           </li>
+          <li class="list-item" id="react-interactive-blob">
+            <a
+              href="https://sammyrobensparadise.github.io/react-interactive-blob/?path=/story/blob--blob"
+              class="link"
+              >react-interactive-blob
+              (https://sammyrobensparadise.github.io/react-interactive-blob)</a
+            >
+            <p>
+              React Interactive Blob is an interactive and customizable blob component for react
+              applications. It is built in TypeScript. It can be used just like any other React JSX
+              Component.
+            </p>
+          </li>
           <li class="list-item" id="drag-and-drop">
             <a
               href="https://SammyRobensParadise.github.io/essential-hebrew-drang-and-drop"
